# Game-Programming-in-CPP

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Chapter01/: CMakeLists.txt
Chapter01/include/: game.h
Chapter01/src/: game.cpp  main.cpp
Chapter02/: CMakeLists.txt
Chapter02/include/: actor.h  anim_sprite_component.h  character.h  component.h  game.h  ship.h  sprite_component.h  tile_map_component.h
Chapter02/src/: actor.cpp  anim_sprite_component.cpp  bg_sprite_component.cpp  character.cpp  game.cpp  ship.cpp  sprite_component.cpp  tile_map_component.cpp
Chapter03/: CMakeLists.txt
Chapter03/include/: actor.h  asteroid.h  component.h  game.h  laser.h  move_component.h  random.h  ship.h  sprite_component.h
Chapter03/src/: actor.cpp  anim_sprite_component.cpp  asteroid.cpp  bg_sprite_component.cpp  circle_component.cpp  component.cpp  game.cpp  input_component.cpp  laser.cpp  move_component.cpp  ship.cpp  sprite_component.cpp
Chapter04/: CMakeLists.txt
Chapter04/include/: ai_component.h  ai_state.h  bullet.h  component.h  enemy.h  game.h  game_tree.h  grid.h  nav_component.h  search.h  sprite_component.h  tile.h  tower.h
Chapter04/src/: ai_component.cpp  ai_state.cpp  bullet.cpp  component.cpp  enemy.cpp  game.cpp  game_tree.cpp  grid.cpp  move_component.cpp  nav_component.cpp  search.cpp  tile.cpp  tower.cpp
Chapter05/: CMakeLists.txt
Chapter05/include/: actor.h  asteroid.h  bg_sprite_component.h  game.h  input_component.h  laser.h  shader.h  sprite_component.h
Chapter05/shaders/: basic.vert  sprite.frag  sprite.vert
Chapter05/src/: actor.cpp  asteroid.cpp  bg_sprite_component.cpp  component.cpp  game.cpp  move_component.cpp  random.cpp  shader.cpp  ship.cpp  sprite_component.cpp  texture.cpp  vertex_array.cpp
Chapter06/: CMakeLists.txt
Chapter06/assets/: Cube.gpmesh  Plane.gpmesh  Sphere.gpmesh
Chapter06/include/: circle_component.h  game.h  mesh.h  mesh_component.h  move_component.h  renderer.h  shader.h  vertex_array.h
Chapter06/shaders/: basic_mesh.frag  phong.frag  phong.vert  sprite.vert
Chapter06/src/: actor.cpp  circle_component.cpp  game.cpp  mesh.cpp  mesh_component.cpp  move_component.cpp  renderer.cpp  shader.cpp  sprite_component.cpp  texture.cpp  vertex_array.cpp
Chapter07/: CMakeLists.txt
Chapter07/include/: actor.h  audio_component.h  audio_system.h  camera_actor.h  doppler_actor.h  game.h  move_component.h  plane_actor.h  renderer.h  sound_event.h
Chapter07/src/: actor.cpp  audio_component.cpp  audio_system.cpp  camera_actor.cpp  doppler_actor.cpp  game.cpp  mesh.cpp  move_component.cpp  renderer.cpp  sound_event.cpp
Chapter08/: CMakeLists.txt
Chapter08/include/: actor.h  circle_component.h  component.h  game.h  input_component.h  input_system.h  ship.h
Chapter08/shaders/: basic.frag  transform.vert
Chapter08/src/: actor.cpp  asteroid.cpp  component.cpp  game.cpp  input_component.cpp  input_system.cpp  shader.cpp  ship.cpp
Chapter09/: CMakeLists.txt
Chapter09/assets/: RacingCar.gpmesh
Chapter09/include/: actor.h  follow_actor.h  follow_camera.h  fps_actor.h  fps_camera.h  game.h  mesh_component.h  orbit_actor.h  orbit_camera.h  renderer.h  spline_actor.h  spline_camera.h  sprite_component.h
Chapter09/src/: actor.cpp  camera_actor.cpp  circle_component.cpp  follow_actor.cpp  follow_camera.cpp  fps_actor.cpp  fps_camera.cpp  game.cpp  move_component.cpp  orbit_actor.cpp  orbit_camera.cpp  plane_actor.cpp  renderer.cpp  spline_actor.cpp  spline_camera.cpp  sprite_component.cpp
Chapter10/: CMakeLists.txt
Chapter10/assets/: Plane.gpmesh  Rifle.gpmesh  Target.gpmesh
Chapter10/include/: actor.h  ball_actor.h  ball_move.h  collision.h  fps_actor.h  game.h  mesh.h  move_component.h  phys_world.h  texture.h
Chapter10/src/: ball_actor.cpp  ball_move.cpp  box_component.cpp  camera_component.cpp  collision.cpp  fps_actor.cpp  game.cpp  mesh.cpp  move_component.cpp  phys_world.cpp  plane_actor.cpp  target_actor.cpp
Chapter11/: CMakeLists.txt
Chapter11/assets/: English.gptext
Chapter11/include/: arrow_target.h  button.h  component.h  dialog_box.h  game.h  hud.h  main_menu.h  mesh_component.h  phys_world.h  plane_actor.h  renderer.h  texture.h  ui_screen.h
Chapter11/src/: arrow_target.cpp  audio_component.cpp  audio_system.cpp  button.cpp  dialog_box.cpp  font.cpp  fps_actor.cpp  game.cpp  hud.cpp  main_menu.cpp  mesh_component.cpp  pause_menu.cpp  renderer.cpp  sprite_component.cpp  target_component.cpp  texture.cpp  ui_screen.cpp
Chapter12/: CMakeLists.txt
Chapter12/include/: animation.h  bone_transform.h  camera_component.h  follow_actor.h  font.h  fps_camera.h  game.h  mesh_component.h  pause_menu.h  renderer.h  shader.h  skeletal_mesh_component.h  vertex_array.h
Chapter12/shaders/: skinned.vert
Chapter12/src/: actor.cpp  animation.cpp  bone_transform.cpp  component.cpp  follow_actor.cpp  game.cpp  hud.cpp  mesh.cpp  mesh_component.cpp  pause_menu.cpp  renderer.cpp  shader.cpp  skeletal_mesh_component.cpp  skeleton.cpp  sound_event.cpp  target_actor.cpp  vertex_array.cpp
Chapter13/: CMakeLists.txt
Chapter13/assets/: PointLight.gpmesh  SpotLight.gpmesh
Chapter13/include/: actor.h  animation.h  box_component.h  g_buffer.h  game.h  matrix_palette.h  mirror_camera.h  point_light_component.h  renderer.h  shader.h  skeleton.h  spotlight_component.h  target_actor.h  texture.h  ui_screen.h
Chapter13/shaders/: gbuffer_global.frag  gbuffer_point_light.frag  gbuffer_write.frag
Chapter13/src/: actor.cpp  ball_move.cpp  bone_transform.cpp  box_component.cpp  follow_camera.cpp  g_buffer.cpp  game.cpp  hud.cpp  math.cpp  mirror_camera.cpp  renderer.cpp  (+6 more)
Chapter14/: CMakeLists.txt
Exercises/Ex-4.2/: CMakeLists.txt
Exercises/Ex-4.2/include/: Actor.h  Board.h  CircleComponent.h  Component.h  Game.h  Math.h  MoveComponent.h  Random.h  SpriteComponent.h
Exercises/Ex-4.2/src/: Actor.cpp  Board.cpp  CircleComponent.cpp  Component.cpp  Game.cpp  Main.cpp  Math.cpp  MoveComponent.cpp  Random.cpp  SpriteComponent.cpp
Pong/: CMakeLists.txt
Pong/include/: game.h
Pong/src/: game.cpp
(+61 files in other folders)
